--- a/Templates/_ED462-{YYYY-MM-DD}-utf8.xml
+++ b/Templates/_ED462-{YYYY-MM-DD}-utf8.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ED462
-EDDate="`Дата сегодня;YYYY-MM-DD;электрон;20\d{2}-\d{2}-\d{2}'"
+EDDate="`Дата сегодня;YYYY-MM-DD;электрон;20[23]\d-[01]\d-[0123]\d'"
 EDNo="`Номер сегодня;1001;каждый раз+1;\d+'"
 EDAuthor="4030XXX000"
 EDReceiver="4012000000"
@@ -8,9 +8,9 @@ xmlns="urn:cbr-ru:ed:v2.0">
 <Request
 BicPBR="044012000"
 OrgBIC="044030XXX"
-DocDate="`Дата документа;YYYY-MM-DD;на бумаге;20\d{2}-\d{2}-\d{2}'"
+DocDate="`Дата документа;YYYY-MM-DD;на бумаге;20[23]\d-[01]\d-[0123]\d'"
 DocNo="`Номер документа;1;на бумаге;\d+'"
-OperationDate="`Дата операции;YYYY-MM-DD;завтра;20\d{2}-\d{2}-\d{2}'"
+OperationDate="`Дата операции;YYYY-MM-DD;завтра;20[23]\d-[01]\d-[0123]\d'"
 OperationType="`Тип операции;2;сдача-1/получение-2;[12]'"
 Sum="`Общая сумма;0;в копейках;\d+'"
 Acc="30101810600000000XXX"
