--- a/Templates/_ССП_Request.xml
+++ b/Templates/_ССП_Request.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ЗапросСведенийОПлатежах
-Версия="1.3"
-ИдентификаторЗапроса="`Идентификатор запроса;GUID;не изменять;.{36}'"
+Версия="`Версия;1.2;1.3 с 10.07;1\.\d'"
+ИдентификаторЗапроса="`Идентификатор запроса;GUID;не изменять;[\da-f]{8}-([\da-f]{4}-){3}[\da-f]{12}'"
 ТипЗапроса="2">
 <Абонент>
 <ЮридическоеЛицо>
@@ -10,7 +10,7 @@
 </ЮридическоеЛицо>
 </Абонент>
 
-<Запрос Дата="`Дата;YYYY-MM-DD;сегодня;20\d{2}-\d{2}-\d{2}'">
+<Запрос Дата="`Дата;YYYY-MM-DD;сегодня;20[23]\d-[01]\d-[0123]\d'">
 
 <Источник>
 <ЮридическоеЛицо
@@ -29,17 +29,19 @@
 <Имя>`Имя;;обязательно;\D+'</Имя>
 <Отчество>`Отчество;;если есть'</Отчество>
 </ФИО>
-<ДатаРождения>`Дата рождения;;YYYY-MM-DD;\d{4}-\d{2}-\d{2}'</ДатаРождения>
-<ДокументЛичности КодДУЛ="`Документ;21;паспорт-21;\d{2}'">
+<ДатаРождения>`Дата рождения;;YYYY-MM-DD;(19|20)\d{2}-[01]\d-[0123]\d'</ДатаРождения>
+<ДокументЛичности КодДУЛ="`Документ;21;паспорт-21;\d{2}.*'">
 <Серия>`Серия;;4 цифры;\d{4}'</Серия>
 <Номер>`Номер;;6 цифр;\d{6}'</Номер>
 <ДатаВыдачи>`Дата выдачи;;YYYY-MM-DD;\d{4}-\d{2}-\d{2}'</ДатаВыдачи>
 <Гражданство>`Гражданство;643;Россия-643;\d{3}'</Гражданство>
 </ДокументЛичности>
+<ИНН>`ИНН;;12 цифр;\d{12}'</ИНН>
+<СНИЛС>`СНИЛС;;2 цифры через пробел;\d{3}-\d{3}-\d{3} \d{2}'</СНИЛС>
 </Субъект>
 
 <Согласие
-ДатаВыдачи="`Согласие дата выдачи;;YYYY-MM-DD;20\d{2}-\d{2}-\d{2}'"
+ДатаВыдачи="`Согласие дата выдачи;;YYYY-MM-DD;20[0123]\d-[01]\d-[0123]\d'"
 СрокДействия="`Срок действия;3;1-3;[123]'"
 ОбОтветственностиПредупрежден="1">
 <Выдано>
@@ -49,12 +51,12 @@
 <ПолноеНаименование>АКЦИОНЕРНОЕ ОБЩЕСТВО &quot;БАНК&quot;</ПолноеНаименование>
 </ЮридическоеЛицо>
 </Выдано>
-<Цель КодЦели="`Код цели;4;1-27 или 99 (иное);(\d{1}|[12]\d{1}|99)'"/>
-<Договор Дата="`Договор дата;;YYYY-MM-DD;\d{4}-\d{2}-\d{2}'"/>
-<ХэшКод>`ХэшКод;;взять из файла;.{64}'</ХэшКод>
+<Цель КодЦели="`Код цели согласия;4;1-99;\d{1,2}'"/>
+<Договор Дата="`Договор дата;;пусто или YYYY-MM-DD;(|20[0123]\d-[01]\d-[0123]\d)'"/>
+<ХэшКод>`ХэшКод;;в нижнем регистре;[\da-f]{64}'</ХэшКод>
 </Согласие>
 
-<Цель КодЦели="`Код цели;4;1-9 или 99 (иной);(\d{1}|99)'"/>
-<СуммаОбязательства Валюта="`Валюта;RUB;рубли-RUB;.{3}'">`Сумма обязательства;;рублей;\d+'</СуммаОбязательства>
+<Цель КодЦели="`Код цели запроса;4;1-99;\d{1,2}.*'"/>
+<СуммаОбязательства Валюта="`Валюта;RUB;пусто или рубли-RUB;(|.{3})'">`Сумма обязательства;;пусто или рубли;(|\d+)'</СуммаОбязательства>
 </Запрос>
 </ЗапросСведенийОПлатежах>
