--- a/Templates/_ED462-{YYYY-MM-DD}-utf8.xml
+++ b/Templates/_ED462-{YYYY-MM-DD}-utf8.xml
@@ -11,7 +11,7 @@ OrgBIC="044030XXX"
 DocDate="`Дата документа;YYYY-MM-DD;на бумаге;20[23]\d-[01]\d-[0123]\d'"
 DocNo="`Номер документа;1;на бумаге;\d+'"
 OperationDate="`Дата операции;YYYY-MM-DD;завтра;20[23]\d-[01]\d-[0123]\d'"
-OperationType="`Тип операции;2;{1 - сдача-1|2 - получение};[12]'"
+OperationType="`Тип операции;2;1 - сдача|2 - получение;[12]'"
 Sum="`Общая сумма;0;в копейках;\d+'"
 Acc="30101810600000000XXX"
 NamePBR="КЦ С-З ГУ БАНКА РОССИИ"
@@ -32,7 +32,7 @@ NameClient="АО &quot;БАНК&quot;"/>
 <Cash Nominal="50" Sum="`Монета 0.50;0;в копейках;\d+'" CashType="0"/>
 <Cash Nominal="10" Sum="`Монета 0.10;0;в копейках;\d+'" CashType="0"/>
 <CashInfo
-CashCode="`Код операции;71.2;{36.2 - сдача|71.2 - получение};(36\.2|71\.2)'"
+CashCode="`Код операции;71.2;36.2 - сдача|71.2 - получение;(36\.2|71\.2)'"
 CashSum="`Общая сумма;0;в копейках;\d+'"/>
 <CustomerData CustomerName="`Инкассатор;Петров Петр Петрович;ФИО полностью;\D+'"/>
 <Annotation>`Телефон;тел. (812) 123-45-67 доб. 8910;для связи;.+'</Annotation>
